--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,33 @@ android {
 
         multiDexEnabled true
     }
+
+    signingConfigs {
+        release {
+            storeFile file("keystore_batam.jks")
+            storePassword "android"
+            keyAlias "keybatam"
+            keyPassword "android"
+        }
+        debug {
+            storeFile file("keystore_batam.jks")
+            storePassword "android"
+            keyAlias "keybatam"
+            keyPassword "android"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
+
 
     dexOptions {
         javaMaxHeapSize "4g"
