--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,9 @@
         <activity android:name=".PDFViewActivityDisposisiDistribusi"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
+        <activity android:name=".CC_Activity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
         <activity android:name=".DistribusiActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
