Redsign PDFView & pabian persuratan cek total

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,9 @@
         <activity android:name=".PDFViewActivityDitolakDisetujui"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
+        <activity android:name=".PDFViewActivitySimpanKirim"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
         <activity android:name=".PDFViewActivityDisposisiDistribusi"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
