Perbaikan design disposisi persuratan

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,6 +105,9 @@
         <activity android:name=".DistribusiActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
+        <activity android:name=".PDFViewActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
         <activity android:name=".bbs.bbs_komentar_activity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
