--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,22 @@
 apply plugin: 'com.android.application'
 
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
+apply plugin: 'com.android.application'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
+apply plugin: 'io.fabric'
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
@@ -44,6 +61,11 @@ android {
     dexOptions {
         javaMaxHeapSize "4g"
     }
+    repositories {
+        mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
@@ -67,6 +89,9 @@ dependencies {
         exclude group: 'org.apache.httpcomponents', module: 'httpclient' //by both name and group
     }
 
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+        transitive = true;
+    }
     compile "com.github.bumptech.glide:glide:3.6.1"
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
