API Disposisi bernada, API perusatan Di tolak, disetujui, recall

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,9 @@
         <activity android:name=".PDFViewActivityDitolakDisetujui"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
+        <activity android:name=".PDFViewActivity_Recall"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
         <activity android:name=".PDFViewActivitySimpanKirim"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
