--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,19 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
     useLibrary 'org.apache.http.legacy'
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
+
     defaultConfig {
         applicationId "com.bpbatam.enterprise"
         minSdkVersion 16
@@ -145,7 +158,6 @@ dependencies {
 
     //PDFViewer
     compile 'com.github.barteksc:AndroidPdfViewer:2.1.0'
-    compile files('libs/picasso-2.5.2.jar')
 
     //CheckBox
     compile 'com.github.andyxialm:SmoothCheckBox:47f69d4ce8'
