--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,42 +11,31 @@
 
     <compatible-screens>
 
-        <!-- normal size screens -->
-        <screen
-            android:screenDensity="hdpi"
-            android:screenSize="normal" />
-        <screen
-            android:screenDensity="xhdpi"
-            android:screenSize="normal" />
-        <screen
-            android:screenDensity="480"
-            android:screenSize="normal" />
-        <screen
-            android:screenDensity="560"
-            android:screenSize="normal" />
-        <screen
-            android:screenDensity="640"
-            android:screenSize="normal" />
+        <!--all normal size screens -->
+        <screen android:screenSize="normal" android:screenDensity="ldpi" />
+        <screen android:screenSize="normal" android:screenDensity="mdpi" />
+        <screen android:screenSize="normal" android:screenDensity="hdpi" />
+        <screen android:screenSize="normal" android:screenDensity="xhdpi" />
 
-        <!-- large size screens -->
-        <screen
-            android:screenDensity="hdpi"
-            android:screenSize="large" />
-        <screen
-            android:screenDensity="xhdpi"
-            android:screenSize="large" />
-        <screen
-            android:screenDensity="480"
-            android:screenSize="large" />
-        <screen
-            android:screenDensity="560"
-            android:screenSize="large" />
-        <screen
-            android:screenDensity="640"
-            android:screenSize="large" />
-        <screen
-            android:screenDensity="420"
-            android:screenSize="normal" />
+        <!-- all large size screens -->
+        <screen android:screenSize="large" android:screenDensity="ldpi" />
+        <screen android:screenSize="large" android:screenDensity="mdpi" />
+        <screen android:screenSize="large" android:screenDensity="hdpi" />
+        <screen android:screenSize="large" android:screenDensity="xhdpi" />
+
+        <!-- all xlarge size screens -->
+        <screen android:screenSize="xlarge" android:screenDensity="ldpi" />
+        <screen android:screenSize="xlarge" android:screenDensity="mdpi" />
+        <screen android:screenSize="xlarge" android:screenDensity="hdpi" />
+        <screen android:screenSize="xlarge" android:screenDensity="xhdpi" />
+
+        <!-- Special case for Nexus 7 -->
+        <screen android:screenSize="large" android:screenDensity="213" />
+        <screen android:screenSize="normal" android:screenDensity="560" />
+
+        <screen android:screenSize="normal" android:screenDensity="480" />
+        <screen android:screenSize="large" android:screenDensity="480" />
+        <screen android:screenSize="xlarge" android:screenDensity="480" />`
     </compatible-screens>
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -54,13 +43,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-feature android:name="android.hardware.telephony"  android:required="false" />
 
     <application
         android:name="com.bpbatam.AppController"
@@ -89,6 +78,9 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="520e8b28b13b5896be0eb1b4d1c4a24bc5965584" />
+
+        <service android:name=".service.ServiceAutoLogOut"></service>
+        <receiver  android:enabled="true" android:name=".service.AlarmReceiver"></receiver>
 
         <activity android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
@@ -145,7 +137,7 @@
         <activity android:name=".bbs.BBS_edit_berita"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
-        <activity android:name=".MainMenuActivity"
+        <activity android:name="com.bpbatam.enterprise.MainMenuActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
         <activity android:name=".disposisi.disposisi_menu"
@@ -202,6 +194,8 @@
         <activity android:name=".persuratan.persuratan_lihat_surat_disposisi_distribusi"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
+        <activity android:name=".disposisi.disposisi_riwayat_detail"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
     </application>
 
 </manifest>
